About page update

--- a/src/about.html
+++ b/src/about.html
@@ -38,17 +38,18 @@
       <main class="page-container flex two-columns flex-center">
         <section class="hero flex flex-column">
           <div class="title title-large">
-            <h1 class="title-animated">About</h1>
+            <h1 class="title-animated">about myself</h1>
           </div>
           <div class="mask">
             <p class="text-animated txt-basic">
-              I’m a passionate Frontend Developer with several years of
-              experience, starting from the concept up to the final result.
+              I’m a passionate
+              <span class="accent">Frontend Developer</span> with several years
+              of experience, starting from the concept up to the final result.
             </p>
           </div>
           <div class="mask">
             <p class="text-animated txt-basic">
-              Some people says im good, other says i`m realy good :)
+              Some people say im good, others say i`m realy good!
             </p>
           </div>
         </section>
@@ -60,22 +61,34 @@
 
           <div class="work-item">
             <div class="mask">
-              <h4 class="text-animated title-small">2006 - 2008</h4>
+              <h4 class="text-animated title-small">2016 - 2018</h4>
             </div>
             <div class="mask">
               <p class="txt-basic text-animated">
-                Junior Frontend Developer at Despak.
+                Junior Frontend Developer at
+                <a
+                  href="https:www.despark.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><span class="accent">Despark</span></a
+                >.
               </p>
             </div>
           </div>
 
           <div class="work-item">
             <div class="mask">
-              <h4 class="text-animated title-small">2008 -</h4>
+              <h4 class="text-animated title-small">2018 -</h4>
             </div>
             <div class="mask">
               <p class="txt-basic text-animated">
-                Javascript Frontend Developer at Dopamine.
+                Javascript Frontend Developer at
+                <a
+                  href="https://www.redtiger.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><span class="accent">Dopamine</span></a
+                >.
               </p>
             </div>
           </div>
