Refactor barba folder

--- a/src/about.html
+++ b/src/about.html
@@ -38,7 +38,7 @@
       <main class="page-container flex two-columns flex-center">
         <section class="hero flex flex-column">
           <div class="title title-large">
-            <h1 class="title-animated">about myself</h1>
+              <div class="title-animated about-lettering"></div>
           </div>
           <div class="mask">
             <p class="text-animated txt-basic">
