--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,11 @@
       data-barba-namespace="home"
     >
       <div class="animation-layer full-size flex flex-column flex-center">
-        <div class="bg full-size"></div>
         <div class="title-wrapper">
-          <h2 class="title-layer">Creative</h2>
+          <div class="title-layer intro-title-one"></div>
         </div>
         <div class="title-wrapper">
-          <h2 class="title-layer">Portfolio</h2>
+          <div class="title-layer intro-title-two"></div>
         </div>
       </div>
 
@@ -45,36 +44,30 @@
         </nav>
       </header>
 
-      <main class="page-container flex two-columns flex-center">
+      <main class="page-container flex flex-center">
+        <div class="profile-image-wrapper">
+          <img class="profile-image" src="./images/profile.jpg" alt="" />
+        </div>
+
         <section class="hero flex flex-column jcc additional-info hide">
           <div class="title title-large">
-            <h1 class="title-animated">Hi,</h1>
-          </div>
-          <div class="title title-large">
-            <h1 class="title-animated">I`m Ivaylo</h1>
+            <div class="title-animated lettering flex flex-center"></div>
           </div>
 
-          <div>
-            <div class="mask job-title">
-              <p class="text-animated fade-on-career">Frontend Developer</p>
-            </div>
-            <div class="mask additional-info-text">
-              <p class="text-animated fade-on-career">
-                Based in Sofia Bulgaria
-              </p>
-            </div>
+          <div class="mask job-title flex flex-center">
+            <p class="text-animated fade-on-career">Frontend Developer</p>
           </div>
-        </section>
+          <div class="mask additional-info-text flex flex-center">
+            <p class="text-animated fade-on-career">
+              Based in Sofia Bulgaria
+            </p>
+          </div>
 
-        <section class="flex aic">
-          <div class="profile-image-wrapper">
-            <img class="profile-image" src="./images/profile.jpg" alt="" />
-          </div>
         </section>
       </main>
     </div>
 
-    <footer class="footer flex flex-center">
+    <footer class="footer flex flex-center hide">
       <h4 class="flex flex-center">find me on</h4>
       <nav class="footer-nav">
         <ul class="footer-list flex flex-center">
