--- a/src/about.html
+++ b/src/about.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>About</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link href="assets/app.css" rel="stylesheet" />
   </head>
 
   <body data-barba="wrapper">
-    <div
-      class="wrapper about-wrapper"
-      data-barba="container"
-      data-barba-namespace="about"
-    >
+    <div class="wrapper about-wrapper" data-barba="container" data-barba-namespace="about" id="grain-container">
       <header class="header flex flex-center">
         <nav class="nav flex flex-center">
           <ul class="nav-list flex flex-center">
@@ -24,9 +18,7 @@
               <a href="index.html" class="nav-link">home</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link is-active"
-                >about<span>&nbsp;</span></a
-              >
+              <a href="about.html" class="nav-link is-active">about<span>&nbsp;</span></a>
             </li>
             <li class="nav-item">
               <a href="works.html" class="nav-link">works</a>
@@ -38,7 +30,7 @@
       <main class="page-container flex two-columns flex-center">
         <section class="hero flex flex-column">
           <div class="title title-large">
-              <div class="title-animated about-lettering"></div>
+            <div class="title-animated about-lettering"></div>
           </div>
           <div class="mask">
             <p class="text-animated txt-basic">
@@ -66,12 +58,8 @@
             <div class="mask">
               <p class="txt-basic text-animated">
                 Junior Frontend Developer at
-                <a
-                  href="https:www.despark.com"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><span class="accent">Despark</span></a
-                >.
+                <a href="https:www.despark.com" target="_blank" rel="noopener noreferrer"><span
+                    class="accent">Despark</span></a>.
               </p>
             </div>
           </div>
@@ -83,12 +71,8 @@
             <div class="mask">
               <p class="txt-basic text-animated">
                 Javascript Frontend Developer at
-                <a
-                  href="https://www.redtiger.com/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  ><span class="accent">Dopamine</span></a
-                >.
+                <a href="https://www.redtiger.com/" target="_blank" rel="noopener noreferrer"><span
+                    class="accent">Dopamine</span></a>.
               </p>
             </div>
           </div>
@@ -101,27 +85,15 @@
       <nav class="footer-nav">
         <ul class="footer-list flex flex-center">
           <li class="footer-list-item flex flex-center" data-text="LinkedIn">
-            <a
-              href="https://www.linkedin.com/in/ivaylo-tsachev-92bb36a9/"
-              class="footer-list-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              >LinkedIn</a
-            >
+            <a href="https://www.linkedin.com/in/ivaylo-tsachev-92bb36a9/" class="footer-list-link" target="_blank"
+              rel="noopener noreferrer">LinkedIn</a>
           </li>
           <li class="footer-list-item flex flex-center" data-text="Facebook">
-            <a
-              href="https://www.facebook.com/ivailotsachev"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="footer-list-link"
-              >Facebook</a
-            >
+            <a href="https://www.facebook.com/ivailotsachev" target="_blank" rel="noopener noreferrer"
+              class="footer-list-link">Facebook</a>
           </li>
           <li class="footer-list-item flex flex-center" data-text="Gmail">
-            <a href="mailto:itsa4ev@gmail.com" class="footer-list-link"
-              >Gmail</a
-            >
+            <a href="mailto:itsa4ev@gmail.com" class="footer-list-link">Gmail</a>
           </li>
         </ul>
       </nav>
@@ -129,4 +101,5 @@
 
     <script src="assets/app.js"></script>
   </body>
+
 </html>
