Profile image animation

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,9 @@
       <main class="page-container flex flex-center flex-column">
         <div class="profile-image-wrapper">
           <img class="profile-image" src="./images/profile.jpg" alt="" />
+          <img class="profile-image" src="./images/profile.jpg" alt="" />
+          <img class="profile-image" src="./images/profile.jpg" alt="" />
+          <img class="profile-image" src="./images/profile.jpg" alt="" />
         </div>
 
         <section class="hero flex flex-column jcc additional-info hide">
