Fix image animation

--- a/src/about.html
+++ b/src/about.html
@@ -28,21 +28,26 @@
       </header>
 
       <main class="page-container flex two-columns flex-center">
+        <div class="profile-image-wrapper">
+          <img class="profile-image" src="./images/profile_image_2_1.jpg" alt="" />
+        </div>
+
         <section class="hero flex flex-column">
           <div class="title title-large">
             <div class="title-animated about-lettering"></div>
           </div>
-          <div class="mask">
+          <!-- <div class="mask">
             <p class="text-animated txt-basic">
               I’m a passionate
               <span class="accent">Frontend Developer</span> with several years
               of experience, starting from the concept up to the final result.
             </p>
+          </div> -->
+          <div class="mask">
+            <p class="text-animated txt-basic">I firmly believe that in order to successfully engage and resonate with your audience you must not only communicate a powerful story but you must create a memorable and lasting experience.</p>
           </div>
           <div class="mask">
-            <p class="text-animated txt-basic">
-              Some people say im good, others say i`m realy good!
-            </p>
+            <p class="text-animated txt-basic">I`m always available for interesting collaborations and fun side projects. If you would like to work together, feel free to get in touch.</p>
           </div>
         </section>
 
@@ -56,10 +61,10 @@
               <h4 class="text-animated title-small">2016 - 2018</h4>
             </div>
             <div class="mask">
-              <p class="txt-basic text-animated">
-                Junior Frontend Developer at
-                <a href="https:www.despark.com" target="_blank" rel="noopener noreferrer"><span
-                    class="accent">Despark</span></a>.
+              <p class="txt-basic text-animated">Junior Frontend Developer at
+                <a href="https:www.despark.com" target="_blank" rel="noopener noreferrer">
+                  <span class="accent">Despark</span>
+                </a>.
               </p>
             </div>
           </div>
@@ -76,6 +81,16 @@
               </p>
             </div>
           </div>
+
+          <div class="work-item">
+            <div class="mask">
+              <h4 class="text-animated title-small">I`m in love with</h4>
+            </div>
+            <div class="mask">
+              <p class="txt-basic text-animated">React - Redux - Web Development - ES6 - more...</p>
+            </div>
+          </div>
+
         </section>
       </main>
     </div>
