--- a/src/about.html
+++ b/src/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>About</title>
+    <title>Tsachev - About</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link href="assets/app.css" rel="stylesheet" />
   </head>
@@ -29,20 +29,13 @@
 
       <main class="page-container flex two-columns flex-center">
         <div class="profile-image-wrapper">
-          <img class="profile-image" src="./images/profile_image_2_1.jpg" alt="" />
+          <img class="profile-image" src="./images/profile_image_2.webp" alt="" />
         </div>
 
         <section class="hero flex flex-column">
           <div class="title title-large">
             <div class="title-animated about-lettering"></div>
           </div>
-          <!-- <div class="mask">
-            <p class="text-animated txt-basic">
-              I’m a passionate
-              <span class="accent">Frontend Developer</span> with several years
-              of experience, starting from the concept up to the final result.
-            </p>
-          </div> -->
           <div class="mask">
             <p class="text-animated txt-basic">I firmly believe that in order to successfully engage and resonate with your audience you must not only communicate a powerful story but you must create a memorable and lasting experience.</p>
           </div>
@@ -94,25 +87,6 @@
         </section>
       </main>
     </div>
-
-    <footer class="footer flex flex-center">
-      <h4 class="flex flex-center">find me on</h4>
-      <nav class="footer-nav">
-        <ul class="footer-list flex flex-center">
-          <li class="footer-list-item flex flex-center" data-text="LinkedIn">
-            <a href="https://www.linkedin.com/in/ivaylo-tsachev-92bb36a9/" class="footer-list-link" target="_blank"
-              rel="noopener noreferrer">LinkedIn</a>
-          </li>
-          <li class="footer-list-item flex flex-center" data-text="Facebook">
-            <a href="https://www.facebook.com/ivailotsachev" target="_blank" rel="noopener noreferrer"
-              class="footer-list-link">Facebook</a>
-          </li>
-          <li class="footer-list-item flex flex-center" data-text="Gmail">
-            <a href="mailto:itsa4ev@gmail.com" class="footer-list-link">Gmail</a>
-          </li>
-        </ul>
-      </nav>
-    </footer>
 
     <script src="assets/app.js"></script>
   </body>
