--- a/src/works.html
+++ b/src/works.html
@@ -12,7 +12,7 @@
   </head>
 
   <body data-barba="wrapper">
-    <div class="wrapper" data-barba="container" data-barba-namespace="works">
+    <div class="wrapper works-wrapper" data-barba="container" data-barba-namespace="works">
       <header class="header flex flex-center">
         <nav class="nav flex flex-center">
           <ul class="nav-list flex flex-center">
@@ -36,37 +36,6 @@
         <a href="/roobar.html">roobar</a>
       </main>
     </div>
-
-    <footer class="footer flex flex-center">
-      <h4 class="flex flex-center">find me on</h4>
-      <nav class="footer-nav">
-        <ul class="footer-list flex flex-center">
-          <li class="footer-list-item flex flex-center" data-text="LinkedIn">
-            <a
-              href="https://www.linkedin.com/in/ivaylo-tsachev-92bb36a9/"
-              class="footer-list-link"
-              target="_blank"
-              rel="noopener noreferrer"
-              >LinkedIn</a
-            >
-          </li>
-          <li class="footer-list-item flex flex-center" data-text="Facebook">
-            <a
-              href="https://www.facebook.com/ivailotsachev"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="footer-list-link"
-              >Facebook</a
-            >
-          </li>
-          <li class="footer-list-item flex flex-center" data-text="Gmail">
-            <a href="mailto:itsa4ev@gmail.com" class="footer-list-link"
-              >Gmail</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </footer>
 
     <script src="assets/app.js"></script>
   </body>
