Works page animations

--- a/src/works.html
+++ b/src/works.html
@@ -6,13 +6,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>About</title>
+    <title>Tsachev - Works</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link href="assets/app.css" rel="stylesheet" />
   </head>
 
   <body data-barba="wrapper">
     <div class="wrapper works-wrapper" data-barba="container" data-barba-namespace="works">
+
       <header class="header flex flex-center">
         <nav class="nav flex flex-center">
           <ul class="nav-list flex flex-center">
@@ -31,9 +32,68 @@
         </nav>
       </header>
 
-      <main class="page-container">
-        <h2>works page</h2>
-        <a href="/roobar.html">roobar</a>
+      <main class="page-container works-container">
+          <section class="flex flex-center  three-columns full-size">
+
+            <a class="column work-item flex flex-center" href="roobar.html">
+              <figure class="work-image-wrapper">
+                <img class="work-image" src="./images/roobar_item.png" alt="">
+              </figure>
+              <div class="titles flex flex-column">
+                <div class="mask">
+                  <p class="counter">1.</p>
+                </div>
+                <div class="mask">
+                  <h2 class="work-item-title">Roobar</h2>
+                </div>
+                <div class="mask">
+                  <p class="description">Create the perfect alternative snack!</p>
+                </div>
+              </div>
+            </a>
+
+            <a class="column work-item flex flex-center" href="roobar.html">
+              <figure class="work-image-wrapper">
+                <img class="work-image" src="./images/boomburgers_item.jpg" alt="">
+              </figure>
+              <div class="titles flex flex-column">
+                <div class="mask">
+                  <p class="counter">2.</p>
+                </div>
+                <div class="mask">
+                  <h2 class="work-item-title">Boom</h2>
+                </div>
+                <div class="mask">
+                  <h2 class="work-item-title">Burgers</h2>
+                </div>
+                <div class="mask">
+                  <p class="description">We make burgers. Gourmet burgers!</p>
+                </div>
+              </div>
+            </a>
+
+            <a class="column work-item flex flex-center" href="roobar.html">
+              <figure class="work-image-wrapper">
+                <img class="work-image" src="./images/newbloom_item.jpg" alt="">
+              </figure>
+              <div class="titles flex flex-column">
+                <div class="mask">
+                  <p class="counter">3.</p>
+                </div>
+                <div class="mask">
+                  <h2 class="work-item-title">New</h2>
+                </div>
+                <div class="mask">
+                  <div class="work-item-title">Bloom</div>
+                </div>
+                <div class="mask">
+                  <p class="description">Quality WINES for every special moment!</p>
+                </div>
+              </div>
+            </a>
+
+          </section>
+        </section>
       </main>
     </div>
 
